src/test/ui/issues/issue-18919.stderr
error[E0277]: the size for values of type `dyn for<'r> std::ops::Fn(&'r isize) -> isize` cannot be known at compilation time
  --> $DIR/issue-18919.rs:3:15
   |
LL | fn ho_func(f: Option<FuncType>) {
   |               ^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
...
LL | enum Option<T> {
   |             - required by this bound in `Option`
   |
   = help: the trait `std::marker::Sized` is not implemented for `dyn for<'r> std::ops::Fn(&'r isize) -> isize`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
help: you could relax the implicit `Sized` bound on `T` if it were used through indirection like `&T` or `Box<T>`
  --> $DIR/issue-18919.rs:7:13
   |
LL | enum Option<T> {
   |             ^ this could be changed to `T: ?Sized`...
LL |     Some(T),
   |          - ...if indirection was used here: `Box<T>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
